<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_icon_description">App Icon</string>
    <string name="close_button_description">Close</string>
    <string name="minimize_button_description">Minimize</string>
    <string name="unknown_caller">Unknown Caller</string>
    <string name="close_button_icon">✕</string>
    <string name="minimize_button_icon">_</string>
    <string name="app_name">Alternate</string>
    <string name="callerid_authority">expo.modules.callerid.directory</string>
    <string name="caller_photo_description">Caller Photo</string>
</resources>
