<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/main_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/caller_card_background"
        android:orientation="vertical">

        <!-- Header with app icon and name -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_background"
                android:contentDescription="@string/app_icon_description"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/appName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text='@string/app_name'
                android:textColor="@color/primary_text_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/collapse_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/minimize_button_description"
                android:src="@drawable/ic_minimize_24"
                app:tint="@color/close_button_color" />

            <ImageButton
                android:id="@+id/close_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/close_button_description"
                android:src="@drawable/ic_close_24"
                app:tint="@color/close_button_color" />
        </LinearLayout>

        <!-- Caller information section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/caller_info_card_background"
            android:orientation="vertical"
            android:padding="10dp">

            <!-- Caller Photo and Name Section -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <ImageView
                    android:id="@+id/callerPhoto"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_marginEnd="12dp"
                    android:background="@drawable/circle_background"
                    android:clipToOutline="true"
                    android:contentDescription="@string/caller_photo_description"
                    android:scaleType="centerCrop" />


                <TextView
                    android:id="@+id/callerName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/unknown_caller"
                    android:textColor="@color/secondary_text_color"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/callerAppointment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_work_24"
                android:drawablePadding="5dp"
                android:paddingBottom="4dp"
                android:text="appointment"
                android:textColor="@color/secondary_text_color"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/callerCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_location_24"
                android:drawablePadding="5dp"
                android:text="city"
                android:textColor="@color/secondary_text_color"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
